core/tests/snapshots/errors__fail_type_check.snap
---
source: core/tests/errors.rs
expression: "run_error(concat! (\"tests/errors/\", stringify! (fail_type_check), \".rain\"))"
---
<hidden>:4:2
<hidden>:7:17
| }
| 
| let foo = fn(x: Integer) {
                  ^^^^^^^ unrecoverable error: type mismatch, expected [Integer] actual String
